# byps

./: .gitignore  CMakeLists.txt  COMPLETION_SUMMARY.md  Cargo.toml  DEMO.md  DIR.txt  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  final_demo.json  install.sh  test_result.json
Developer/: ARCHITECTURE_RESEARCH.md  DEVELOPMENT_ROADMAP.md  QUICK_START.md  README.md  RESEARCH_PLAN.md  TECHNIQUE_RESEARCH.md  TECHNOLOGY_STACK.md  TESTING_STRATEGY.md
cpp/include/: byps.h
cpp/include/common/: error.hpp  logger.hpp  types.hpp  utils.hpp
cpp/include/network/: connection_pool.hpp  http_client.hpp  tls.hpp
cpp/include/techniques/: encoding.hpp  header_forge.hpp  path_bypass.hpp  protocol_abuse.hpp  unicode.hpp
cpp/lib/: byps_core.cpp
cpp/src/common/: error.cpp  logger.cpp  types.cpp  utils.cpp
cpp/src/network/: connection_pool.cpp  http_client.cpp  tls.cpp
cpp/src/techniques/: encoding.cpp  header_forge.cpp  path_bypass.cpp  protocol_abuse.cpp  unicode.cpp
resources/configs/: aggressive.yaml  default.yaml  stealth.yaml
resources/wordlists/: headers.txt  methods.txt  paths.txt
scripts/: build.sh  setup.sh  test.sh
src/: bridge.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/output/: csv.rs  html.rs  json.rs  mod.rs  terminal.rs
tests/cpp/: CMakeLists.txt  test_path_bypass.cpp  test_utils.cpp
tests/fixtures/mock_servers/: .gitignore  README.md  basic_server.py  example_usage.py  header_server.py  run_all_servers.sh  stop_all_servers.sh  test_servers.py  waf_server.py
